# pyxx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  commit.sh  first_output  test.sh
src/: main.c  main.cpp
testing/: andandorandnot.py  andandorandnot.pyxx  braces.py  braces.pyxx  func.py  func.pyxx  funkybraces.py  funkybraces.pyxx  lambda.py  lambda.pyxx  lambdainlambda.py  lambdainlambda.pyxx  lowercasetf.py  lowercasetf.pyxx  plus.py  plus.pyxx  quotes.py  quotes.pyxx  test.py  test.pyxx
